RESOLVED FIXED57291
REGRESSION(r82152): fast/dom/HTMLAnchorElement/set-href-attribute-pathname.html
https://bugs.webkit.org/show_bug.cgi?id=57291
Summary REGRESSION(r82152): fast/dom/HTMLAnchorElement/set-href-attribute-pathname.html
Maciej Stachowiak
Reported 2011-03-28 18:08:04 PDT
REGRESSION(r82152): fast/dom/HTMLAnchorElement/set-href-attribute-pathname.html
Attachments
Patch (2.71 KB, patch)
2011-03-28 18:11 PDT, Maciej Stachowiak
darin: review+
Maciej Stachowiak
Comment 1 2011-03-28 18:11:13 PDT
Maciej Stachowiak
Comment 2 2011-03-28 18:27:42 PDT
WebKit Review Bot
Comment 3 2011-03-28 19:12:11 PDT
http://trac.webkit.org/changeset/82181 might have broken SnowLeopard Intel Release (Tests)
Note You need to log in before you can comment on or make changes to this bug.