2011-03-28  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Darin Adler.

        REGRESSION(r82152): fast/dom/HTMLAnchorElement/set-href-attribute-pathname.html
        https://bugs.webkit.org/show_bug.cgi?id=57291

        * platform/KURL.cpp:
        (WebCore::KURL::parse): Instead of considering URLs with
        credentials but no host invalid, consider them to have a host
        ending in @ (which fails down the line)/
2011-03-28  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin Adler.

        REGRESSION(r82152): fast/dom/HTMLAnchorElement/set-href-attribute-pathname.html
        https://bugs.webkit.org/show_bug.cgi?id=57291

        * http/tests/uri/username-with-no-hostname.html: Adjusted test to be more tolerant
        of exactly how the image load fails.


Canonical link: https://commits.webkit.org/71983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82181 268f45cc-cd09-0410-ab3c-d52691b4dbfc